--- a/styles/global.css
+++ b/styles/global.css
@@ -9,7 +9,7 @@
   padding: 0;
   font: inherit; /* font reset */
 
-  -webkit-font-smooting: antialiased;
+  -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
 
@@ -21,7 +21,7 @@
   --text-color-primary: #F4F4F5;
   --text-color-secondary: #A1A1AA;
 
-  --brand-color: #F7B733;
+  --brand-color-primary: #F7B733;
   --brand-color-secondary: #FC4A1A;
 
   --ff-sans: "Inter", system-ui, sans-serif;
