--- a/styles/utility.css
+++ b/styles/utility.css
@@ -30,6 +30,18 @@
   gap: 1rem;
 }
 
+.flex {
+  display: flex;
+}
+
+.gap-1 {
+  gap: 1rem;
+}
+
+.grid {
+  display: grid;
+}
+
 /* - DESKTOP ONLY */
 
 @media (width >= 80em) {
